# claude-foreman

./: .gitignore  .mcp.json  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json
.codex-plugin/: plugin.json
.github/workflows/: ci.yml
plugins/claude-foreman/: README.md  pyproject.toml
plugins/claude-foreman/.claude-plugin/: plugin.json
plugins/claude-foreman/.codex-plugin/: plugin.json
plugins/claude-foreman/scripts/: foreman_mcp.py
plugins/claude-foreman/skills/manage-claude-foreman/: SKILL.md
plugins/claude-foreman/skills/manage-claude-foreman/agents/: openai.yaml
plugins/claude-foreman/skills/manage-claude-foreman/references/: workflow-schema.md
plugins/claude-foreman/src/claude_foreman/: __init__.py  approval_policy.py  cli.py  codex_worker.py  config.py  daemon.py  database.py  doctor.py  mcp_server.py  models.py  runner.py  usage.py  verification.py  worktrees.py
plugins/claude-foreman/tests/: test_codex_worker.py  test_database.py  test_doctor.py  test_mcp.py  test_plugin_metadata.py  test_subscription_auth.py  test_usage.py  test_verification.py  test_worktrees.py
plugins/foreman/: .mcp.json  README.md  pyproject.toml
plugins/foreman/.claude-plugin/: plugin.json
plugins/foreman/.codex-plugin/: plugin.json
plugins/foreman/scripts/: bootstrap_runtime.py  foreman_cli.py  foreman_mcp.py  sync_version.py
plugins/foreman/skills/manage-foreman-agents/: SKILL.md
plugins/foreman/skills/manage-foreman-agents/agents/: openai.yaml
plugins/foreman/skills/manage-foreman-agents/references/: approval-policy.md  workflow-schema.md
plugins/foreman/src/foreman/: __init__.py  approval_policy.py  cli.py  codex_worker.py  config.py  controller.py  daemon.py  dashboard.py  database.py  doctor.py  mcp_server.py  runner.py  verification.py  wake.py  worktrees.py
plugins/foreman/tests/: test_approval_policy.py  test_codex_worker.py  test_daemon.py  test_dashboard.py  test_database.py  test_doctor.py  test_mcp.py  test_plugin_metadata.py  test_runner.py  test_subscription_auth.py  test_usage.py  test_verification.py  test_wait.py  test_worktrees.py
scripts/: bootstrap_runtime.py
skills/manage-claude-foreman/references/: approval-policy.md
src/claude_foreman/: __init__.py  controller.py
tests/: test_approval_policy.py  test_daemon.py  test_runner.py  test_worktrees.py
